changed veg icon back

--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@ The main aim of this book is to simplify this phase by creating food that is not
 		   
 		            <div class="span6">
 		                <div class="item">
-		                    <h2 class="pull-left"> <img src="img/features-screen.png" alt="icon" class="pull-left"> Vegetarian Recipes</h2>
-		                    <p>This book contains only Indian Vegetarian Recipes. India's diversity is reflected in this book as it covers recipes from different parts of the country.</p> 
+		                    <h2 class="pull-left"> <img src="img/features-screen.png" alt="icon" class="pull-left"> Nutritious Recipes</h2>
+		                    <p>This book contains only Indian Vegetarian Recipes that are nutritionally perfect for a baby. India's diversity is reflected in this book as it covers recipes from different parts of the country.</p> 
 		                </div>
 		                <div class="item">
 		                    <h2 class="pull-left"> <img src="img/features-bike.png" alt="icon" class="pull-left"> Travel Food </h2>
