--- a/index.html
+++ b/index.html
@@ -299,31 +299,6 @@ The main aim of this book is to simplify this phase by creating food that is not
 		            <p>This unique baby food cookbook is available both as an e-book and as a limited paper back edition. Choose the one that suits you best.</p>
 		        </div>
 		        <!-- End Title -->
-    			
-    			<div class="row-fluid box one">
-    				<div class="span6">
-    					<h3>Amazon Kindle E-book</h3>
-              <p>Almost 6 years ago I staring publishing Indian baby food recipes on <a href="http://romasharma.com">my blog</a> and I received amazing responses from moms all over. Inspired by this, on 13th Apr 2012, “<a href="http://www.amazon.com/Great-Recipes-your-Baby-ebook/dp/B007QVHWDO/">60 Great Baby Food Recipes</a>” eBook was made available on KDP amazon, for instant global access. The eBook has completed more than a year and continues to to receive patronage from Indian moms, globally.</p>
-                        <a href="http://www.amazon.com/Great-Recipes-your-Baby-ebook/dp/B007QVHWDO/" class="btn">Buy e-Book <img src="img/buynow-icon.png" alt="icon"></a>
-    				</div>
-    				<div class="span6">
-                        <div id="myCarouselimg" class="carousel slide">
-                            <ol class="carousel-indicators">
-                                <li data-target="#myCarouselimg" data-slide-to="0" class="active"></li>
-                                <li data-target="#myCarouselimg" data-slide-to="1"></li>
-                                <li data-target="#myCarouselimg" data-slide-to="2"></li>
-                            </ol>
-
-                            <!-- Carousel items -->
-                            <div class="carousel-inner">
-                                <div class="active item"><img src="img/roma/book.png" alt="Amazon Kindle Book"></div>
-                                <div class="item"><img src="img/roma/book.png" alt="Amazon Kindle Book"></div>
-                                <div class="item"><img src="img/roma/book.png" alt="Amazon Kindle Book"></div>
-                            </div>                                         
-                        </div>            
-    				</div>
-    			</div>
-
     			<div class="row-fluid box two">
     				<div class="span6">
     					<img src="img/roma/paperback.JPG" alt="image">
@@ -331,10 +306,22 @@ The main aim of this book is to simplify this phase by creating food that is not
     				<div class="span6">
     					<h3>Limited Paperback Edition </h3>
     					<p>Based on growing requests we have now released a paperback edition of the book. The book is an A5-sized fully illustrated, premium quality book designed to be not only informative but also visually appealing. It is a perfect gift for a little baby when you first visit him or her.</p>
-              <a href="http://www.flipkart.com/60-great-baby-food-recipes-nutritious-vegetarian-your/p/itmdpy4xvfswh6xr" class="btn">Buy Book <img src="img/buynow-icon.png" alt="Book at Flipkart"></a>
+              <a href="http://www.flipkart.com/60-great-baby-food-recipes-nutritious-vegetarian-your/p/itmdpy4xvfswh6xr?affid=INMayank" class="btn">Buy Book <img src="img/buynow-icon.png" alt="Book at Flipkart"></a>
               <!--<a href="http://babyfoodrecipes.wufoo.com/forms/z7x4m1/" onclick="window.open(this.href,  null, 'height=625, width=680, toolbar=0, location=0, status=1, scrollbars=1, resizable=1'); return false" class="btn">Buy Book <img src="img/buynow-icon.png" alt="icon"></a>-->
     				</div>
     			</div>
+
+    			<div class="row-fluid box one">
+    				<div class="span6">
+    					<h3>Amazon Kindle E-book</h3>
+              <p>Almost 6 years ago I staring publishing Indian baby food recipes on <a href="http://romasharma.com">my blog</a> and I received amazing responses from moms all over. Inspired by this, on 13th Apr 2012, “<a href="http://www.amazon.com/Great-Recipes-your-Baby-ebook/dp/B007QVHWDO/">60 Great Baby Food Recipes</a>” eBook was made available on KDP amazon, for instant global access. The eBook has completed more than a year and continues to to receive patronage from Indian moms, globally.</p>
+                        <a href="http://www.amazon.com/Great-Recipes-your-Baby-ebook/dp/B007QVHWDO/" class="btn">Buy e-Book <img src="img/buynow-icon.png" alt="icon"></a>
+    				</div>
+    				<div class="span6">
+               <img src="img/roma/book.png" alt="Amazon Kindle Book">
+    				</div>
+    			</div>
+
 
     		</div>
     	</div>
