added new image

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 
     <!-- Main Menu -->
-    <nav class="navbar navbar-fixed-top animated fadeInDown delay2">
+    <nav class="navbar navbar-fixed-top animated fadeInDown ">
         <div class="navbar-inner">
             <div class="container">
                 <div class="wrapp">
@@ -74,7 +74,8 @@
                               <li><a href="#menu-gallery">Gallery</a></li>
                               <li><a href="#menu-buy">Buy</a></li>
                               <li><a href="#menu-author">Author</a></li>
-                              <li><a data-toggle="modal" href="#myModal">contact</a></li>
+                              <!--<li><a data-toggle="modal" href="#myModal">contact</a></li>-->
+                              <li><a href="https://babyfoodrecipes.wufoo.com/forms/m1vja5190uen01k/" onclick="window.open(this.href,  null, 'height=497, width=680, toolbar=0, location=0, status=1, scrollbars=1, resizable=1'); return false">contact</a></li>
                         </ul>
                      </div>
                      <!--End Desktop Main Menu-->
@@ -98,7 +99,8 @@
             </div>
             <div id="response"></div>
             <!-- Form -->
-            <form id="form-contact" class="form_online" method="post" action="http://minimal.coralixthemes.com/book/demo">
+            <!--
+            <form id="form-contact" class="form_online" method="post" action="/">
                 <label class="no">Name</label>
                 <input type="text" placeholder="Name" name="Name" required>
                 <label class="no">Email</label>
@@ -108,6 +110,7 @@
                 <h5>All fields with an * are required.</h5>
                 <input type="submit" value="Send" class="send">
             </form>
+            -->
             <!-- Form -->
         </div>
         <div class="modal-footer"></div>
@@ -118,19 +121,19 @@
     <header class="BeanBGAnimate" id="menu-home">
         <div class="container">
         	<div class="wrapp">
-	            <div class="row-fluid text-center logo animated fadeInUp delay3">
+	            <div class="row-fluid text-center logo animated fadeInUp delay1">
                 <h1>60 Great Baby Food Recipes</h1>  
 	            </div>    
 	            <div class="row-fluid">
 	                <div class="span6 pull-right">
-	                   <h1 class="animated fadeInRight delay4">60 nutritious, Indian vegetarian baby food dishes that you can start feeding your baby 6 months onwards.</h1>
-                       <h3 class="animated fadeInRight delay5"></h3>
-                       <div class="buttons bigfigure animated fadeInUp delay6">
+	                   <h1 class="animated fadeInRight delay3">60 nutritious, Indian vegetarian baby food dishes that you can start feeding your baby 6 months onwards.</h1>
+                       <h3 class="animated fadeInRight delay2"></h3>
+                       <div class="buttons bigfigure animated fadeInUp delay3">
                            <a href="#menu-book" class="btn tour"> Know More <img src="img/btn-tour-icon.png" alt="icon"> </a>
                            <a href="#menu-buy" class="btn download">Buy at Rs 320/- <img src="img/btn-down-icon.png" alt="icon"> </a>
                        </div>
 	                </div>
-	                <div class="span6 text-center bigfigure animated fadeInUp delay6">
+	                <div class="span6 text-center bigfigure animated fadeInUp delay2">
                          <img alt="logo" src="img/roma/book_cover_image.JPG">
 	                </div>
 	            </div>
@@ -141,7 +144,7 @@
 
 
     <!-- Features Section -->
-    <section class="features generic animated fadeInUp delay8" id="menu-book">  
+    <section class="features generic animated fadeInUp delay3" id="menu-book">  
     	<div class="container">
     		<div class="wrapp">
 
