--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                        <h3 class="animated fadeInRight delay2"></h3>
                        <div class="buttons bigfigure animated fadeInUp delay3">
                            <a href="#menu-book" class="btn tour"> Know More <img src="img/btn-tour-icon.png" alt="icon"> </a>
-                           <a href="#menu-buy" class="btn download">Buy at Rs 320/- <img src="img/btn-down-icon.png" alt="icon"> </a>
+                           <a href="#menu-buy" class="btn download">Buy at Rs 256/- <img src="img/btn-down-icon.png" alt="icon"> </a>
                        </div>
 	                </div>
 	                <div class="span6 text-center bigfigure animated fadeInUp delay2">
@@ -318,7 +318,9 @@ The main aim of this book is to simplify this phase by creating food that is not
     				<div class="span6">
     					<h3>Amazon Kindle E-book</h3>
               <p>Almost 6 years ago I staring publishing Indian baby food recipes on <a href="http://romasharma.com">my blog</a> and I received amazing responses from moms all over. Inspired by this, on 13th Apr 2012, “<a href="http://www.amazon.com/Great-Recipes-your-Baby-ebook/dp/B007QVHWDO/">60 Great Baby Food Recipes</a>” eBook was made available on KDP amazon, for instant global access. The eBook has completed more than a year and continues to to receive patronage from Indian moms, globally.</p>
-                        <a href="http://www.amazon.com/Great-Recipes-your-Baby-ebook/dp/B007QVHWDO/" class="btn">Buy e-Book <img src="img/buynow-icon.png" alt="icon"></a>
+              <a href="http://www.amazon.com/gp/product/B007QVHWDO/ref=as_li_qf_sp_asin_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=B007QVHWDO&linkCode=as2&tag=babfoorec00-20" class="btn">Buy e-Book <img src="img/buynow-icon.png" alt="icon"></a><img src="http://ir-na.amazon-adsystem.com/e/ir?t=babfoorec00-20&l=as2&o=1&a=B007QVHWDO" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+
+              <!--<a href="http://www.amazon.com/Great-Recipes-your-Baby-ebook/dp/B007QVHWDO/" class="btn">Buy e-Book </a>-->
     				</div>
     				<div class="span6">
                <img src="img/roma/book.png" alt="Amazon Kindle Book">
