small version of the image

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                        </div>
 	                </div>
 	                <div class="span6 text-center bigfigure animated fadeInUp delay2">
-                         <img alt="logo" src="img/roma/book_cover_image.JPG">
+                         <img alt="logo" src="img/roma/book_cover.jpg">
 	                </div>
 	            </div>
             </div>   
