--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ The main aim of this book is to simplify this phase by creating food that is not
     				<div class="span6">
     					<h3>Limited Paperback Edition </h3>
     					<p>Based on growing requests we have now released a paperback edition of the book. The book is an A5-sized fully illustrated, premium quality book designed to be not only informative but also visually appealing. It is a perfect gift for a little baby when you first visit him or her.</p>
-              <a href="http://www.flipkart.com/60-great-baby-food-recipes-nutritious-vegetarian-your/p/itmdpy4xvfswh6xr?affid=INMayank" class="btn">Buy Book <img src="img/buynow-icon.png" alt="Book at Flipkart"></a>
+              <a href="/flipkart" class="btn">Buy Book <img src="img/buynow-icon.png" alt="Book at Flipkart"></a>
               <!--<a href="http://babyfoodrecipes.wufoo.com/forms/z7x4m1/" onclick="window.open(this.href,  null, 'height=625, width=680, toolbar=0, location=0, status=1, scrollbars=1, resizable=1'); return false" class="btn">Buy Book <img src="img/buynow-icon.png" alt="icon"></a>-->
     				</div>
     			</div>
@@ -468,6 +468,7 @@ The main aim of this book is to simplify this phase by creating food that is not
     </section>
     <!-- End Copyright Section -->
 
+    This site was updated on {{ site.time | date_to_string }}
 
     <a href="#" class="scrollup"><i class="icon-up-open"></i></a>      
 	    
