--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: blue
                        <h3 class="animated fadeInRight delay2"></h3>
                        <div class="buttons bigfigure animated fadeInUp delay3">
                            <a href="#menu-book" class="btn tour"> Know More <img src="img/btn-tour-icon.png" alt="icon"> </a>
-                           <a href="#menu-buy" class="btn download">Buy at Rs 256/- <img src="img/btn-down-icon.png" alt="icon"> </a>
+                           <a href="#menu-buy" class="btn download">Buy at Rs 320/- <img src="img/btn-down-icon.png" alt="icon"> </a>
                        </div>
 	                </div>
 	                <div class="span6 text-center bigfigure animated fadeInUp delay2">
@@ -96,35 +96,35 @@ The main aim of this book is to simplify this phase by creating food that is not
                 <div class="row-fluid">
 
                     <div class="span4">
-                        <a href="img/roma/mini_idlies.JPG" class="lightbox_image port-item" title="Mini Idlis">
+                        <a href="/mini-idlies" class="lightbox_image port-item" title="Mini Idlis">
                             <span class="hovers"> + </span>
                             <img src="img/roma/mini_idlies.JPG" alt="Mini Idlis">
                         </a>
                         <div class="imageinfo">
-                            <h2 class="text-center"><a href="img/roma/mini_idlies.JPG" class="lightbox_image" title="Mini Idlies"> Mini Idlis </a></h2>
+                            <h2 class="text-center"><a href="/mini-idlies" class="lightbox_image" title="Mini Idlies"> Mini Idlis </a></h2>
                             <p class="text-center">After the age of 8 months babies can be given soft idlies, dosas, etc.</p>
                         </div>
                     </div>
 
                     <div class="span4">
-                        <a href="img/roma/carrot_halwa.JPG" class="lightbox_image port-item" title="Carrot Halwa">
+                        <a href="/carrot-halwa" class="lightbox_image port-item" title="Carrot Halwa">
                             <span class="hovers"> + </span>
                             <img src="img/roma/carrot_halwa.JPG" alt="Carrot Halwa">
                         </a>
                         <div class="imageinfo">
-                            <h2 class="text-center"><a href="img/roma/carrot_halwa.JPG" class="lightbox_image" title="Carrot Halwa"> Carrot Halwa </a></h2>
+                            <h2 class="text-center"><a href="/carrot-halwa" class="lightbox_image" title="Carrot Halwa"> Carrot Halwa </a></h2>
                             <p class="text-center">The natural sweetness of carrots makes this halwa or mash appetizing for a trial.</p>
                         </div>
                     </div>
 
 
                     <div class="span4">
-                        <a href="img/roma/moong_chaat.JPG" class="lightbox_image port-item" title="Moong Chaat">
+                        <a href="/moong-chaat" class="lightbox_image port-item" title="Moong Chaat">
                             <span class="hovers"> + </span>
                             <img src="img/roma/moong_chaat.JPG" alt="Moong Chaat">
                         </a>
                         <div class="imageinfo">
-                            <h2 class="text-center"><a href="img/roma/moong_chaat.JPG" class="lightbox_image" title="Moong Chaat"> Moong Chaat </a></h2>
+                            <h2 class="text-center"><a href="/moong-chaat" class="lightbox_image" title="Moong Chaat"> Moong Chaat </a></h2>
                             <p class="text-center">Green moong dal serves as a great pick-n-eat dish for the baby.</p>
                         </div>
                     </div>
@@ -134,35 +134,35 @@ The main aim of this book is to simplify this phase by creating food that is not
                 <div class="row-fluid">
 
                     <div class="span4">
-                        <a href="img/roma/sprouts_bhel.JPG" class="lightbox_image port-item" title="Sprouts Bhel">
+                        <a href="/sprouts-bhel" class="lightbox_image port-item" title="Sprouts Bhel">
                             <span class="hovers"> + </span>
                             <img src="img/roma/sprouts_bhel.JPG" alt="Sprouts Bhel">
                         </a>
                         <div class="imageinfo">
-                            <h2 class="text-center"><a href="img/roma/sprouts_bhel.JPG" class="lightbox_image" title="Sprouts Bhel"> Sprouts Bhel </a></h2>
+                            <h2 class="text-center"><a href="/sprouts-bhel" class="lightbox_image" title="Sprouts Bhel"> Sprouts Bhel </a></h2>
                             <p class="text-center">The vitamin, mineral and protein content of green moong dal can be substantially increased by sprouting.</p>
                         </div>
                     </div>
 
                     <div class="span4">
-                        <a href="img/roma/vermicelli_upma.JPG" class="lightbox_image port-item" title="Vermicelli Upma">
+                        <a href="/vermicelli-upma" class="lightbox_image port-item" title="Vermicelli Upma">
                             <span class="hovers"> + </span>
                             <img src="img/roma/vermicelli_upma.JPG" alt="Vermicelli Upma">
                         </a>
                         <div class="imageinfo">
-                            <h2 class="text-center"><a href="img/roma/vermicelli_upma.JPG" class="lightbox_image" title="Vermicelli Upma"> Vermicelli Upma </a></h2>
+                            <h2 class="text-center"><a href="/vermicelli-upma" class="lightbox_image" title="Vermicelli Upma"> Vermicelli Upma </a></h2>
                             <p class="text-center">Upma can be made using a variety of base ingredients like vermicelli, semolina, beaten rice, etc.</p>
                         </div>
                     </div>
 
 
                     <div class="span4">
-                        <a href="img/roma/aata_halwa.JPG" class="lightbox_image port-item" title="Aata Halwa">
+                        <a href="/aata-halwa" class="lightbox_image port-item" title="Aata Halwa">
                             <span class="hovers"> + </span>
                             <img src="img/roma/aata_halwa.JPG" alt="Aata Halwa">
                         </a>
                         <div class="imageinfo">
-                            <h2 class="text-center"><a href="img/roma/aata_halwa.JPG" class="lightbox_image" title="Aata Halwa"> Aata Halwa </a></h2>
+                            <h2 class="text-center"><a href="/aata-halwa" class="lightbox_image" title="Aata Halwa"> Aata Halwa </a></h2>
                             <p class="text-center">This soft mash made out of roasted whole wheat flour is not only delicious but also easy to swallow.</p>
                         </div>
                     </div>
