--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ The main aim of this book is to simplify this phase by creating food that is not
  <p>
  The book is available on flipkart for an India-wide distribution. It is also available in selected baby stores across Bangalore.
  </p>
- <div class="btn"><a href="http://www.amazon.com/Great-Recipes-your-Baby-Food-ebook/dp/B007QVHWDO/">Buy Now</a></div>
+ <div class="btn"><a href="http://www.flipkart.com/60-great-baby-food-recipes-nutritious-vegetarian-your/p/itmdpy4xvfswh6xr">Buy Now</a></div>
 
  <div class="clear"></div>
  
@@ -40,7 +40,7 @@ The main aim of this book is to simplify this phase by creating food that is not
  </p>
 
 
- <div class="btn" ><a href="http://www.flipkart.com/60-great-baby-food-recipes-nutritious-vegetarian-your/p/itmdpy4xvfswh6xr?affid=INMayank">Buy Now</a></div>
+ <div class="btn" ><a href="http://www.amazon.com/Great-Recipes-your-Baby-Food-ebook/dp/B007QVHWDO/">Buy Now</a></div>
 
 
 </div>
