the link to flipkart was broken, added a short url, with affl id

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ The main aim of this book is to simplify this phase by creating food that is not
  <p>
  The book is available on flipkart for an India-wide distribution. It is also available in selected baby stores across Bangalore.
  </p>
- <div class="btn"><a href="http://goo.gl/OZGl17">Buy Now</a></div>
+ <div class="btn"><a href="goo.gl/gKCPBE">Buy Now</a></div>
 
  <div class="clear"></div>
  
