--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ The main aim of this book is to simplify this phase by creating food that is not
  <h1>eBook</h1>
  <img src="/img/roma/book.png"  class="img_book" alt="eBook" align="right" > 
  <p>
- Almost 6 years ago I staring publishing Indian baby food recipes on <a href="http://romasharma.com">my blog</a> and I received 
+ Almost 6 years ago I started publishing Indian baby food recipes on <a href="http://romasharma.com">my blog</a> and I received 
  amazing responses from moms all over. 
  Inspired by this, on 13th Apr 2012, “60 Great Baby Food Recipes” eBook was made available on KDP amazon, for instant global access. 
  The eBook has completed more than a year and continues to to receive patronage from Indian moms, globally.
